--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.0",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^5.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
