--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "express": "^4.17.1",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.0",
-    "multer": "^1.4.2",
-    "multer-gridfs-storage": "^5.0.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.13.7",
+    "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
