--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^5.13.7",
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
